<resources>
    <string name="app_name">Slowdy</string>
    <string name="Home">Home</string>
    <string name="Notifications">Notifications</string>
    <string name="Settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current">Current</string>
    <string name="whats_new">What\'s new</string>
    <string name="missed">Missed</string>
    <string name="test_profile">Test Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="notifications">Notifications</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="stay_informed_of_your_habits_with_n_slowdy">Stay informed of your habits with \n Slowdy</string>
    <string name="stay_informed_of_your_habits_with_n_n_slowdy">Stay informed of your habits with \n \n slowdy</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="or">Or</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="add_a_habit">Add a habit</string>
    <string name="please_enter_a_valid_habit_name">Please enter a valid habit name</string>
    <string name="ok">OK</string>
    <string name="create_your_habit_fragment_title">Create your habit</string>
    <string name="habit_name_error">Please enter a valid habit name for your habit!</string>
    <string name="pick_a_color_for_your_habit">Pick a color for your habit</string>
    <string name="picked_color_for_your_habit">Picked color for your habit :</string>
    <string name="set_color_foor_your_habit">Set color foor your habit</string>
    <string name="your_reminder">Your Reminder</string>
    <string name="create_reminder">Create Reminder</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="oR">OR</string>
    <string name="what_should_we_call_you">What should we call you?</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="next">Next</string>
    <string name="settings">Settings</string>
    <string name="default_web_client_id">253264818636-d2ijafvv5hujooem9iadpt2594k1ic19.apps.googleusercontent.com</string>
    <string name="email_verification_sent">An Email has been Sent to registered account. Please verify before login.</string>
</resources>