<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:paddingTop="24dp"
    tools:context=".view.fragments.auth.SignInFragment">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/guidelineStart"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/guidelineEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"/>



        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/emailAddressInput"
            android:background="@drawable/button_background"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="20dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:inputType="textEmailAddress"
            app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/enter_your_email_address" />


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/passwordInput"
                android:background="@drawable/button_background"
                app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
                app:layout_constraintStart_toStartOf="@id/guidelineStart"
                app:layout_constraintTop_toBottomOf="@+id/emailAddressInput"
                app:layout_constraintHorizontal_bias="0.5"
                android:padding="20dp"
                android:layout_marginTop="24dp"
                android:textColor="#ffffff"
                android:textColorHint="#ffffff"
                android:inputType="textPassword"
                android:hint="@string/enter_your_password" />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        android:textColor="#ffffff"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        android:textSize="20sp"
        android:id="@+id/googleSignInText"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/or"/>

  <LinearLayout
      android:layout_width="0dp"
      app:layout_constraintStart_toStartOf="@id/guidelineStart"
      app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
      android:layout_height="wrap_content"
      android:gravity="center_horizontal"
      android:id="@+id/googleSignIn"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/googleSignInText"
      style="@style/ButtonPrimary"
      android:orientation="horizontal">

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/googleSigninLogo"
          android:src="@drawable/googleg_standard_color_18"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center_horizontal"
          android:layout_marginStart="20dp"
          android:text="@string/continue_with_google"/>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
