<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.auth.LandingFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/landingScreenQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stay_informed_of_your_habits_with_n_slowdy"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/guidelineStart"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/guidelineEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ButtonPrimary"
        android:text="@string/sign_up"
        android:layout_marginTop="30dp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@+id/landingScreenQuote"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ButtonPrimary"
        android:text="@string/log_in"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        app:layout_constraintBottom_toTopOf="@+id/skipButton"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skipButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ButtonPrimary"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        android:text="Skip for now"
        android:textColor="#000000"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />


</androidx.constraintlayout.widget.ConstraintLayout>