<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:constraintLayout="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/guidelineStart"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        app:layout_constraintGuide_percent="0.9"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        app:layout_constraintGuide_percent="0.1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/skippedNameText"
            app:layout_constraintTop_toBottomOf="@+id/guidelineTop"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintBottom_toTopOf="@+id/skippedUserNameInput"
            android:gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/what_should_we_call_you"
            android:textColor="#ffffff" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/skippedUserNameInput"
            android:layout_marginTop="60dp"
            android:background="@drawable/text_input_background"
            app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
            app:layout_constraintStart_toStartOf="@id/guidelineStart"
            app:layout_constraintTop_toBottomOf="@+id/skippedNameText"
            android:padding="20dp"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:inputType="textEmailAddress"
            app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/please_enter_your_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skipButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/ButtonPrimary"
        android:text="@string/next"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/skippedUserNameInput"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.5"
        android:textColor="#000000"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/guidelineStart" />

    <ProgressBar
        android:id="@+id/skippedProgressBar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        android:indeterminateOnly="true"
        android:indeterminateTint="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/skipButton"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/skipButton" />


</androidx.constraintlayout.widget.ConstraintLayout>