<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.home.SettingsFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="14dp"
            android:src="@drawable/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/Settings"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile_image" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/test_profile"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userContactNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="XXXXXXXXXXX" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/ButtonPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_button"
                android:paddingHorizontal="20dp"
                android:text="@string/edit_profile"
                android:textColor="@color/primary_button_text_color" />

            <LinearLayout
                android:background="@drawable/round_setting_panel_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/nightModeIcon"
                        android:layout_height="40dp"
                        android:src="@drawable/night_mode_icon"
                        android:background="@drawable/change_mode_background"
                        android:padding="12dp">

                    </ImageView>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/night_mode"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/nightModeIcon"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/notificationIcon"
                        android:layout_height="40dp"
                        android:src="@drawable/notifications"
                        android:background="@drawable/notifications_background"
                        android:padding="12dp">

                    </ImageView>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/notifications"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/notificationIcon"/>

                    <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:switchMinWidth="50dp" />

                </RelativeLayout>

        </LinearLayout>

            <LinearLayout
                android:background="@drawable/round_setting_panel_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/messageIcon"
                        android:layout_height="40dp"
                        android:src="@drawable/message_icon"
                        android:background="@drawable/send_message_background"
                        android:padding="12dp">

                    </ImageView>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/send_us_a_message"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/messageIcon"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_arrow_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:tint="@color/primary_icon_color" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/aboutUsIcon"
                        android:layout_height="40dp"
                        android:src="@drawable/about_us_icon"
                        android:background="@drawable/about_us_background"
                        android:padding="12dp">

                    </ImageView>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/about_us"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/aboutUsIcon"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_arrow_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:tint="@color/primary_icon_color" />


                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/round_setting_panel_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:id="@+id/logoutIcon"
                        android:layout_height="40dp"
                        android:src="@drawable/logout_icon"
                        android:background="@drawable/logout_background"
                        android:padding="12dp">

                    </ImageView>

                    <TextView
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/logout"
                        android:textStyle="bold"
                        android:layout_toEndOf="@+id/logoutIcon"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/right_arrow_icon"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        app:tint="@color/primary_icon_color" />

                </RelativeLayout>



            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>